test_check.log
warning: unused imports: `Response` and `header::CONTENT_TYPE`
 --> http\src\sse.rs:2:12
  |
2 | ...::{header::CONTENT_TYPE, Response};
  |       ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `BodyExt` and `StreamBody`
 --> http\src\sse.rs:3:22
  |
3 | ...util::{StreamBody, BodyExt};
  |           ^^^^^^^^^^  ^^^^^^^

warning: unused import: `StreamExt`
 --> http\src\sse.rs:7:36
  |
7 | ...m::{Stream, StreamExt};
  |                ^^^^^^^^^

warning: `ranvier-http` (lib) generated 3 warnings (run `cargo fix --lib -p ranvier-http` to apply 3 suggestions)
   Compiling ranvier-http v0.7.0 (F:\project\ranvier\ranvier-workspace\ranvier\http)
warning: unused import: `std::convert::Infallible`
 --> http\tests\sse_test.rs:4:5
  |
4 | use std::convert::Infallible;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: the method `into_response` exists for struct `ranvier_http::Sse<Pin<Box<impl Stream<Item = Result<ranvier_http::SseEvent, Infallible>>>>>`, but its trait bounds were not satisfied
    --> http\tests\sse_test.rs:37:24
     |
  37 |     let response = sse.into_response();
     |                        ^^^^^^^^^^^^^ method cannot be called due to unsatisfied trait bounds
     |
    ::: C:\Users\realwolf\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\pin.rs:1094:1
     |
1094 | pub struct Pin<Ptr> {
     | ------------------- doesn't satisfy `_: Sync`
     |
    ::: F:\project\ranvier\ranvier-workspace\ranvier\http\src\sse.rs:83:1
     |
  83 | pub struct Sse<S> {
     | ----------------- doesn't satisfy `_: IntoResponse`
     |
     = note: the following trait bounds were not satisfied:
             `Pin<Box<impl Stream<Item = Result<ranvier_http::SseEvent, Infallible>>>>: Sync`
             which is required by `ranvier_http::Sse<Pin<Box<impl Stream<Item = Result<ranvier_http::SseEvent, Infallible>>>>>: ranvier_http::IntoResponse`

warning: unused import: `futures_util::StreamExt`
 --> http\tests\sse_test.rs:5:5
  |
5 | use futures_util::StreamExt;
  |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `http_body_util::BodyExt`
 --> http\tests\sse_test.rs:6:5
  |
6 | use http_body_util::BodyExt;
  |     ^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
warning: `ranvier-http` (test "sse_test") generated 3 warnings
error: could not compile `ranvier-http` (test "sse_test") due to 1 previous error; 3 warnings emitted
